Inclusão da instalação do docker para poder manipular os containeres do host pelo guest

--- a/editor/Dockerfile
+++ b/editor/Dockerfile
@@ -40,6 +40,7 @@ RUN apk add --update \
     && mv $HOME/dotfiles/.vim/colors $HOME/.vim/colors \
     && mv $HOME/dotfiles/.vimrc $HOME/.vimrc \
     && mv $HOME/dotfiles/.tmux.conf $HOME/.tmux.conf \
-    && rm -rf /var/cache/apk/* $HOME/dotfiles 
+    && rm -rf /var/cache/apk/* $HOME/dotfiles \
+    && apk --no-cache add docker
 
 
