Corrige instalação do node.js
O script anterior era do alpine e a imagem elixir é do debian/jessie.

--- a/elrx/Dockerfile
+++ b/elrx/Dockerfile
@@ -1,25 +1,8 @@
 FROM elixir:latest
 
-ENV VERSION=v6.9.4 CMD=node DOMAIN=nodejs.org
-
-RUN apk-install curl make gcc g++ python linux-headers paxctl libgcc libstdc++ && \
-    curl -sSL https://${DOMAIN}/dist/${VERSION}/${CMD}-${VERSION}.tar.gz | tar -xz && \
-    cd /${CMD}-${VERSION} && \
-    ./configure --prefix=/usr ${CONFIG_FLAGS} && \
-    make -j$(grep -c ^processor /proc/cpuinfo 2>/dev/null || 1) && \
-    make install && \
-    paxctl -cm /usr/bin/${CMD} && \
-    cd / && \
-    if [ -x /usr/bin/npm -a -z "$NO_NPM_UPDATE" ]; then \
-    npm install -g npm && \
-    find /usr/lib/node_modules/npm -name test -o -name .bin -type d | xargs rm -rf; \
-    fi && \
-    apk del curl make gcc g++ python linux-headers paxctl ${DEL_PKGS} && \
-    rm -rf /etc/ssl /${CMD}-${VERSION} ${RM_DIRS} \
-    /usr/share/man /tmp/* /root/.npm /root/.node-gyp \
-    /usr/lib/node_modules/npm/man /usr/lib/node_modules/npm/doc /usr/lib/node_modules/npm/html \
-    /var/cache/apk/*
-
 RUN set -xe \
     && mix.local hex \
-    && mix archive.install https://github.com/phoenixframework/archives/raw/master/phoenix_new.ez
+    && mix archive.install https://github.com/phoenixframework/archives/raw/master/phoenix_new.ez \
+    && curl -sL https://deb.nodesource.com/setup_6.x | bash - \
+    && apt-get install -y nodejs
+
