--- a/elrx/Dockerfile
+++ b/elrx/Dockerfile
@@ -1,8 +1,9 @@
 FROM elixir:latest
 
 RUN set -xe \
-    && mix.local hex \
-    && mix archive.install https://github.com/phoenixframework/archives/raw/master/phoenix_new.ez \
     && curl -sL https://deb.nodesource.com/setup_6.x | bash - \
-    && apt-get install -y nodejs
+    && apt-get install -y nodejs \
+    && mix local.hex --force \
+    && mix local.rebar --force \
+    && mix archive.install --force https://github.com/phoenixframework/archives/raw/master/phoenix_new.ez 
 
