Instala inotify-tools

--- a/elrx/Dockerfile
+++ b/elrx/Dockerfile
@@ -5,5 +5,7 @@ RUN set -xe \
     && apt-get install -y nodejs \
     && mix local.hex --force \
     && mix local.rebar --force \
-    && mix archive.install --force https://github.com/phoenixframework/archives/raw/master/phoenix_new.ez 
+    && mix archive.install --force https://github.com/phoenixframework/archives/raw/master/phoenix_new.ez \
+    && apt-get -qq update \
+    && apt-get install inotify-tools
 
