Permite inserir plugin em tempo de build
Porque existem diferenças na alteração de arquivos usados quando se está no phoenix a partir do 1.3 pra cima. Como esse editor é primariamente para ser usado em edição de código elixir e já foram feitos plugins para alternancia de arquivos de especificação e produção - (danielfoxp2/vim-openalternatefile-phx1.2 e danielfoxp2/vim-openalternatefile-phx1.3), então essa mudança é necessária.

No futuro essa mudança permitirá o uso de qualquer plugin para o editor, tendo suas funções básicas padrão, porém podendo se adaptar para qualquer linguagem, como ruby, c# e a própria elixir. 

Para isso será preciso tornar mais flexível o comando sed para percorrer os plugins passados. Isso significa que não poderá ser um uma linha do Dockerfile, mas sim em um script separado que será chamado pelo Dockerfile.

Para não perder tempo, visto que essa alteração é para atender ao sistema de perguntas e respostas que precisa ser desenvolvido para o doutorado de minha esposa, então por hora fica fixo dessa maneira até que seja necessária a alteração para atender outras linguagens, por exemplo, quando implementar os meus screencasts.

--- a/editor/Dockerfile
+++ b/editor/Dockerfile
@@ -1,5 +1,7 @@
 FROM alpine:latest
 
+ARG alternate_files
+
 RUN apk add --update \
     bash \
     tree \
@@ -39,6 +41,7 @@ RUN apk add --update \
     && git config --global core.editor vim \
     && mv $HOME/dotfiles/.vim/colors $HOME/.vim/colors \
     && mv $HOME/dotfiles/.vimrc $HOME/.vimrc \
+    && sed -i '/Bundle '"'"'danielfoxp2\/vim-renamecurrentfile'"'"'/a Bundle '"'"'danielfoxp2\/$alternate_files'"'" $HOME/.vimrc \
     && mv $HOME/dotfiles/.tmux.conf $HOME/.tmux.conf \
     && rm -rf /var/cache/apk/* $HOME/dotfiles \
     && apk --no-cache add docker
